  - Adapted scripts to new elven bodies.
  - Animals can eat hay sheafs now.
  - Implemented growable and harvestable hay, hops, wheat, cotton and flax.
  - Grapevines and fruit trees can be harvested if they have resources.
  - If enhancing an item fails and the item breaks, chars in range of 5 tiles and if in LoS will notice that.
  - Cows will give milk, chicken eggs (on double click).
 * Misc. Changes:
 * Known Issues, Bugs, and Missing Features:
  - Some skills are still incomplete.
  - Spawn regions are incomplete.
    We welcome donated OSI-like spawn scripts!
  - Town/World regions are incomplete.
    We welcome donated OSI-like region scripts!
  - Possible that a few monsters are missing and/or incomplete.
  - Multis (Houses/Boats) are not completly supported.
  - For latest information check out: http://bugs.wpdev.org

Wolfpack 12.9.13 Beta (25. December 2004)
 * Core Changes:
  - Fixed meditation skillcheck in mana regeneration code.
  - Changed GM talk color.
  - Implemented the onCheckVictim event.
  - Implemented the onDoDamage event.
  - Stablemasters now remove the stabled pets from the follower list.
  - Corpses now decay in multis too.
  - Implemented a walktest command for testing walking.
  - Fixed several other walking bugs.
  - Implemented onRemoteUse for checking if an object that is in the belonging
    of another char may be used. First called for the using char, then for the
    owner of the object.
  - Implemented onSnooping that is called for the owner and for the player trying to
    open a container.
  - Fixed shop restock.
  - Fixed bug #0000364. (Vendors not selling items they bought)
  - Rewrote the vendor buy handler code.
  - Improved the configure script:
    Translations are disabled by default now.
    Cleaner output.
    Fixed a bug with MySQL library reporting.
  - The SectorMaps singleton has been renamed to MapObjects.
  - The deprecated RegionIterators have been removed.