@@ -73,6 +73,7 @@
 	<script>trashcan</script>
 	<script>tribal_paint</script>
 	<script>wall_clock</script>
+	<script>wheat</script>
 	<script>wool</script>
 <!--	<script>xmlconfig</script> -->
 	<script>yarn</script>
